Found a way to add color back to legend

--- a/quick_tests/quickFEWZ_test.ipynb
+++ b/quick_tests/quickFEWZ_test.ipynb
@@ -154,10 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "609aa659-cc7d-48de-b597-053fcd23b17e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[#1] INFO:NumericIntegration -- RooRealIntegral::init(full_36fbspline pdf_Int[x]) using numeric integrator RooIntegrator1D to calculate Int(x)\n",
+      "[#1] INFO:NumericIntegration -- RooRealIntegral::init(full_xsecspline pdf_Int[x]) using numeric integrator RooIntegrator1D to calculate Int(x)\n",
+      "[#1] INFO:NumericIntegration -- RooRealIntegral::init(full_shapespline pdf_Int[x]) using numeric integrator RooIntegrator1D to calculate Int(x)\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -178,27 +187,44 @@
     "canvas = rt.TCanvas(name,name,800, 800)\n",
     "x = rt.RooRealVar(\"x\", \"x\", 110, 150)\n",
     "frame = x.frame()\n",
-    "legend = rt.TLegend(0.65,0.55,0.9,0.7)\n",
     "color_map = {\n",
     "    \"full_36fb\" : rt.kBlue,\n",
     "    \"full_xsec\" : rt.kGreen,\n",
     "    \"full_shape\" : rt.kRed,\n",
     "}\n",
+    "names = []\n",
+    "\n",
+    "legend = rt.TLegend(0.65,0.55,0.9,0.7)\n",
+    "\n",
     "\n",
     "for histo in histo_l:\n",
     "    x_vals, y_vals = getFEWZ_vals(histo)\n",
     "    y_vals = y_vals / np.sum(y_vals)\n",
     "    x_arr_vec = rt.vector(\"double\")(x_vals)\n",
     "    y_arr_vec = rt.vector(\"double\")(y_vals)\n",
-    "    name = histo.GetName()\n",
+    "    name = histo.GetName() + \"spline\"\n",
     "    roo_spline = rt.RooSpline(name, name, x, x_arr_vec, y_arr_vec)\n",
-    "    roo_spline.plotOn(frame, LineColor=color_map[name])\n",
-    "    legend.AddEntry(name,name, \"L\")\n",
+    "    name = histo.GetName() + \"spline pdf\"\n",
+    "    roo_spline_pdf = rt.RooWrapperPdf(name, name, roo_spline)\n",
+    "    roo_spline_pdf.plotOn(frame, rt.RooFit.LineColor(color_map[histo.GetName()]))\n",
+    "    # adding by name doesn't work for some reason, as TLegend has problem finding the object from frame\n",
+    "    legend.AddEntry(frame.getObject(int(frame.numItems())-1),name, \"L\") # this adds the latest object added to frame to legend\n",
+    "    # legend.AddEntry(frame.findObject(roo_spline_pdf.GetName()),name, \"L\") # this returns object not found\n",
+    "\n",
+    "frame.Draw()\n",
+    "\n",
+    "# legend.AddEntry(frame.getObject(int(frame.numItems())-1),name, \"L\")\n",
+    "# legend.AddEntry(roo_spline_pdf,name, \"L\")\n",
+    "\n",
+    "names.append(name)\n",
+    "\n",
+    "# for name in names:\n",
+    "#     legend.AddEntry(name,name, \"L\")\n",
     "\n",
     "    \n",
     "\n",
     "\n",
-    "frame.Draw()\n",
+    "\n",
     "legend.Draw()\n",
     "canvas.Update()\n",
     "canvas.Draw()\n",
@@ -221,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 18,
    "id": "a8c959d3-53c7-4fd2-8e31-c004fef7dee0",
    "metadata": {},
    "outputs": [
@@ -230,6 +256,7 @@
      "output_type": "stream",
      "text": [
       "roo_histDyMC_normalized.sumEntries() : 1.0000000027939677\n",
+      "roo_histDyMC_normalized.sumEntries() : 1.0\n",
       "x_vals.shape: (42,)\n"
      ]
     },
@@ -239,7 +266,8 @@
      "text": [
       "Warning in <TCanvas::Constructor>: Deleting canvas with same name: Canvas\n",
       "Warning in <TFile::Append>: Replacing existing TH1: DyMC_hist__DY_dimuon_mass (Potential memory leak).\n",
-      "Info in <TCanvas::Print>: pdf file ./quick_plots/stage3_plot_dy_ggH0.pdf has been created\n"
+      "Warning in <TFile::Append>: Replacing existing TH1: DyMC_hist__DY_dimuon_mass (Potential memory leak).\n",
+      "Info in <TCanvas::Print>: pdf file ./quick_plots/stage3_plot_dy_ggH4.pdf has been created\n"
      ]
     }
    ],
@@ -267,16 +295,19 @@
     "massDyMC.setBins(nbins)\n",
     "# clear canvas to plot the signal model\n",
     "canvas.Clear()\n",
-    "frame = massDyMC.frame()\n",
     "legend = rt.TLegend(0.65,0.55,0.9,0.7)\n",
+    "frame = massDyMC.frame()\n",
+    "\n",
     "color_map = {\n",
     "    0 : rt.kBlue,\n",
     "    1 : rt.kGreen+2,\n",
     "    2 : rt.kRed,\n",
     "    3 : rt.kYellow,\n",
+    "    4 : rt.kBlack,\n",
     "}\n",
-    "\n",
-    "for cat_ix in range(1):\n",
+    "dyMC_names = []\n",
+    "# for cat_ix in range(1):\n",
+    "for cat_ix in [0,4]:\n",
     "# cat_ix = 0\n",
     "    subCat_filter = (processed_eventsSignalMC[\"subCategory_idx\"] == cat_ix)\n",
     "    subCat_mass_arrDyMC = processed_eventsSignalMC.dimuon_mass[subCat_filter]\n",
@@ -289,13 +320,13 @@
     "    THist = roo_histDyMC.createHistogram(mass_name)\n",
     "    # THist.Scale(1/roo_histSigMC.sumEntries()) # scale to make intgral equal to one\n",
     "    THist.Scale(1/THist.Integral())\n",
-    "    roo_histDyMC_normalized = rt.RooDataHist(\"DyMC_hist_normalized\",f\"binned version of DyMC of subcat {cat_ix}\", rt.RooArgSet(massDyMC), THist) # turn it back to RooDataHist for plotOn to work\n",
+    "    roo_histDyMC_normalized = rt.RooDataHist(f\"DyMC SubCat{cat_ix}\",f\"binned version of DyMC of subcat {cat_ix}\", rt.RooArgSet(massDyMC), THist) # turn it back to RooDataHist for plotOn to work\n",
     "    \n",
     "    print(f\"roo_histDyMC_normalized.sumEntries() : {roo_histDyMC_normalized.sumEntries()}\")\n",
-    "    roo_histDyMC_normalized.plotOn(frame, DataError=\"SumW2\", Name=roo_datasetDyMC.GetName(),MarkerColor=color_map[cat_ix])\n",
+    "    roo_histDyMC_normalized.plotOn(frame, DataError=\"SumW2\", Name=roo_datasetDyMC.GetName(), MarkerColor=color_map[cat_ix], MarkerStyle=100)\n",
+    "    dyMC_names.append(roo_histDyMC_normalized.GetName())\n",
     "    \n",
-    "    name=roo_histDyMC_normalized.GetName()\n",
-    "    legend.AddEntry(name,\"test\", \"P\")\n",
+    "    \n",
     "\n",
     "# add in roospline\n",
     "x_vals, y_vals = getFEWZ_vals(FEWZ_histo_36fb)\n",
@@ -303,16 +334,20 @@
     "y_vals = y_vals / np.sum(y_vals)\n",
     "x_arr_vec = rt.vector(\"double\")(x_vals)\n",
     "y_arr_vec = rt.vector(\"double\")(y_vals)\n",
-    "name = histo.GetName()\n",
+    "name = FEWZ_histo_36fb.GetName()\n",
     "roo_spline = rt.RooSpline(name, name, massDyMC, x_arr_vec, y_arr_vec)\n",
     "\n",
     "\n",
     "roo_spline.plotOn(frame, LineColor=rt.kGreen)\n",
-    "frame.Draw()\n",
+    "\n",
     "\n",
     "# legend\n",
     "name = roo_spline.GetName()\n",
-    "legend.AddEntry(name,name, \"L\")\n",
+    "legend.AddEntry(name, \"RooSpline of FEWZ\", \"L\")\n",
+    "for name in dyMC_names:\n",
+    "    legend.AddEntry(name, name, \"P\")\n",
+    "\n",
+    "frame.Draw()\n",
     "legend.Draw()\n",
     "\n",
     "canvas.Update()\n",
