refactored to make it outside friendly

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -156,9 +156,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e3e49c2b-55e7-433d-9656-f7aa9984e7c4",
+   "metadata": {},
+   "source": [
+    "# Stage 2\n",
+    "Now we take the stage1 output for stage2: Categorization of skimmed and selected data into production mode categories. Currently, only ggH production mode is supported.\n",
+    "\n",
+    "Each category processes the stage1 output through their own MVAs.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "51588c0a-99d1-40bd-b5db-97512eebde5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load_path: /depot/cms/users/yun79/results/stage1/test_VBF-filter_JECon_07June2024/2018/f1_0\n",
+      "len(training_features): 20\n",
+      "sum df.h_peak: 5809371.0\n",
+      "scalers: (2, 20)\n",
+      "df_i: [{dimuon_cos_theta_cs: -0.327, dimuon_eta: 2.38, dimuon_phi_cs: ..., ...}, ...]\n",
+      "df_i_feat[:,0]: [-0.327, -0.608, 0.288, 0.0652, 0.706, ..., 0.22, -0.039, 0.739, 0.795, -0.0614]\n",
+      "df_i.dimuon_cos_theta_cs: [-0.327, -0.608, 0.288, 0.0652, 0.706, ..., 0.22, -0.039, 0.739, 0.795, -0.0614]\n",
+      "model: phifixedBDT_2018\n",
+      "prediction: [0.3871868  0.28236988 0.43517634 ... 0.1707716  0.31343392 0.47809392]\n",
+      "scalers: (2, 20)\n",
+      "df_i: [{dimuon_cos_theta_cs: 0.511, dimuon_eta: -1.55, dimuon_phi_cs: 0.48, ...}, ...]\n",
+      "df_i_feat[:,0]: [0.511, -0.241, -0.118, 0.201, 0.847, ..., -0.0385, 0.815, 0.844, -0.0747]\n",
+      "df_i.dimuon_cos_theta_cs: [0.511, -0.241, -0.118, 0.201, 0.847, ..., -0.0385, 0.815, 0.844, -0.0747]\n",
+      "model: phifixedBDT_2018\n",
+      "prediction: [0.4106679  0.4083793  0.55877185 ... 0.3553411  0.37208927 0.2874001 ]\n",
+      "scalers: (2, 20)\n",
+      "df_i: [{dimuon_cos_theta_cs: 0.462, dimuon_eta: -1.1, dimuon_phi_cs: -1.43, ...}, ...]\n",
+      "df_i_feat[:,0]: [0.462, -0.667, 0.635, -0.543, -0.0254, ..., 0.9, -0.245, -0.581, 0.396]\n",
+      "df_i.dimuon_cos_theta_cs: [0.462, -0.667, 0.635, -0.543, -0.0254, ..., 0.9, -0.245, -0.581, 0.396]\n",
+      "model: phifixedBDT_2018\n",
+      "prediction: [0.35621178 0.36158454 0.38196567 ... 0.22500257 0.2475956  0.88994056]\n",
+      "scalers: (2, 20)\n",
+      "df_i: [{dimuon_cos_theta_cs: 0.57, dimuon_eta: 2.81, dimuon_phi_cs: -2.43, ...}, ...]\n",
+      "df_i_feat[:,0]: [0.57, -0.679, 0.34, -0.75, 0.0828, ..., 0.108, 0.187, 0.674, -0.716, 0.669]\n",
+      "df_i.dimuon_cos_theta_cs: [0.57, -0.679, 0.34, -0.75, 0.0828, ..., 0.108, 0.187, 0.674, -0.716, 0.669]\n",
+      "model: phifixedBDT_2018\n",
+      "prediction: [0.41821906 0.37016776 0.31468526 ... 0.8998478  0.35014683 0.4176241 ]\n",
+      "subCat BDT edges: [0.         0.55983555 0.70393234 0.76000953 0.83448213 1.        ]\n",
+      "save_filename: /work/users/yun79/stage2_output/ggH/test/processed_events_dyMC.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_path = \"/depot/cms/users/yun79/results/stage1/test_VBF-filter_JECon_07June2024\" # path where stage1 output is saved \n",
+    "save_path = \"/work/users/yun79/stage2_output/ggH/test\" # path where stage2 output is saved \n",
+    "category = \"ggH\"\n",
+    "processes = [\"data\", \"signal\"] # signal here is MC signal sample (ie ggh_powheg)\n",
+    "! python run_stage2.py -load {load_path} -save {save_path}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862e826a-81d7-4b76-b12f-410693b93ab6",
+   "id": "1cec76b1-ead3-4899-92d4-8b019525b2f2",
    "metadata": {},
    "outputs": [],
    "source": []
