Refactored and good to go for stage3 as well

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -170,20 +170,44 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "51588c0a-99d1-40bd-b5db-97512eebde5c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "load_path = \"/depot/cms/users/yun79/results/stage1/test_VBF-filter_JECon_07June2024\" # path where stage1 output is saved \n",
-    "save_path = \"/work/users/yun79/stage2_output/ggH/test\" # path where stage2 output is saved \n",
+    "stage2_load_path = \"/depot/cms/users/yun79/results/stage1/test_VBF-filter_JECon_07June2024\" # path where stage1 output is saved \n",
+    "stage2_save_path = \"/work/users/yun79/stage2_output/ggH/test\" # path where stage2 output is saved \n",
     "category = \"ggH\"\n",
     "samples = [\"data\", \"signal\"] # signal here is MC signal sample (ie ggh_powheg)\n",
-    "! python run_stage2.py -load {load_path} -save {save_path} --samples {' '.join(samples)}"
+    "! python run_stage2.py -load {stage2_load_path} -save {stage2_save_path} --samples {' '.join(samples)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "722f401d-dc87-4647-8b83-974d7e87e8ad",
+   "metadata": {},
+   "source": [
+    "# Stage 3\n",
+    "Now we do the fitting from the stage2 output \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1cec76b1-ead3-4899-92d4-8b019525b2f2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "stage3_load_path = stage2_save_path\n",
+    "! python run_stage3.py -load {stage3_load_path}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9450a774-b3ce-4aec-910d-580d275e68d0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,9 +215,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:coffea2024]",
+   "display_name": "Python [conda env:root632]",
    "language": "python",
-   "name": "conda-env-coffea2024-py"
+   "name": "conda-env-root632-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -205,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
