refactoring to allow introduction of VBF category

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -176,10 +176,10 @@
    "outputs": [],
    "source": [
     "stage2_load_path = \"/depot/cms/users/yun79/results/stage1/test_VBF-filter_JECon_07June2024\" # path where stage1 output is saved \n",
-    "stage2_save_path = \"/work/users/yun79/stage2_output/ggH/test\" # path where stage2 output is saved \n",
-    "category = \"ggH\"\n",
+    "stage2_save_path = \"/work/users/yun79/stage2_output/test\" # path where stage2 output is saved \n",
+    "category = \"ggh\"\n",
     "samples = [\"data\", \"signal\"] # signal here is MC signal sample (ie ggh_powheg)\n",
-    "! python run_stage2.py -load {stage2_load_path} -save {stage2_save_path} --samples {' '.join(samples)}"
+    "! python run_stage2.py -load {stage2_load_path} -save {stage2_save_path} --samples {' '.join(samples)} -cat {category}"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "stage3_load_path = stage2_save_path\n",
-    "! python run_stage3.py -load {stage3_load_path}"
+    "! python run_stage3.py -load {stage3_load_path} -cat {category}"
    ]
   },
   {
