--- a/test/stage1_test.ipynb
+++ b/test/stage1_test.ipynb
@@ -71,10 +71,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "20718333-b81c-4477-b717-149db63e29dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset: dy_M-100To200\n",
+      "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': True, 'dataset': 'dy_M-100To200', 'NanoAODv': 9, 'version': 'latest'}\n",
+      "NanoAODv: 9\n",
+      "doing rochester!\n",
+      "doing fsr!\n",
+      "doing geofit!\n",
+      "electron_id: mvaFall17V2Iso_WP90\n",
+      "small file test sumWeights: 6798350.261352539\n",
+      "muons mass_resolution dpt1: dask.awkward<multiply, npartitions=1>\n",
+      "prepare jets NanoAODv: 9\n"
+     ]
+    }
+   ],
    "source": [
     "load_path = \"./test/stage1_inputs/dy_M-100To200\"\n",
     "\n",
@@ -88,101 +105,72 @@
     "        \"timeout\":2400,\n",
     "        # \"allow_read_errors_with_report\": True, # this makes process skip over OSErrors\n",
     "    },\n",
-    ").events()"
+    ").events()\n",
+    "out_collections = coffea_processor.process(events)\n",
+    "out_collections = ak.zip(out_collections, depth_limit=1).compute()\n",
+    "\n",
+    "load_path = \"./test/stage1_outputs/dy_M-100To200\"\n",
+    "target_out = ak.from_parquet(load_path+\"/part0.parquet\")\n",
+    "for field in target_out.fields:\n",
+    "    target_arr = ak.fill_none(target_out[field], -99.0)\n",
+    "    out_arr = ak.fill_none(out_collections[field], -99.0)\n",
+    "    is_same_arr = ak.all(ak.isclose(target_arr,out_arr))\n",
+    "    if not is_same_arr:\n",
+    "        print(f\"ERROR: not same array for field {field}!\")\n",
+    "        raise ValueError\n",
+    "print(\"Success!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e1d90591-f7b6-4954-904b-3d37106a85b5",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 17,
+   "id": "50714921-4276-404a-8d9e-b0483d8b6401",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d165c57e-f5b8-47ff-8bc3-68f6878f04f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "98db8963-4eb3-46b7-a935-575f9acaa44f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2626feda-0f5e-4ee8-ab3b-966daca8b4a9",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'sumGenWgts': 7720081.838819998,\n",
-       " 'nGenEvts': 2000000,\n",
-       " 'data_entries': None,\n",
-       " 'fraction': 1.0,\n",
-       " 'original_fraction': 1.0,\n",
-       " 'is_mc': True,\n",
-       " 'dataset': 'dy_M-100To200',\n",
-       " 'NanoAODv': 9,\n",
-       " 'version': 'latest'}"
+       "awkward.highlevel.Array"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "events.metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "cffe7a98-0a92-4599-a131-53df85fc0dd6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dataset: dy_M-100To200\n",
-      "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': True, 'dataset': 'dy_M-100To200', 'NanoAODv': 9, 'version': 'latest'}\n",
-      "NanoAODv: 9\n",
-      "doing rochester!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/depot/cms/kernels/root632/lib/python3.12/site-packages/dask_awkward/lib/structure.py:907: UserWarning: Please ensure that dask.awkward<dask, npartitions=1>\n",
-      "        is partitionwise-compatible with dask.awkward<dask, npartitions=1>\n",
-      "        (e.g. counts comes from a dak.num(array, axis=1)),\n",
-      "        otherwise this unflatten operation will fail when computed!\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "doing fsr!\n",
-      "doing geofit!\n",
-      "electron_id: mvaFall17V2Iso_WP90\n",
-      "small file test sumWeights: 6798350.261352539\n",
-      "muons mass_resolution dpt1: dask.awkward<multiply, npartitions=1>\n",
-      "prepare jets NanoAODv: 9\n",
-      "do jec!\n",
-      "cross_section: 254.2\n",
-      "doing musf!\n",
-      "doing LHE!\n",
-      "doing pdf!\n",
-      "jet loop matched_mu_pass b4 : dask.awkward<bitwise-and, npartitions=1>\n",
-      "doing jet puid weights!\n",
-      "sj_dict.keys(): dict_keys(['nsoftjets2_nominal', 'htsoft2_nominal', 'nsoftjets5_nominal', 'htsoft5_nominal'])\n",
-      "adding QGL weights!\n",
-      "doing btag wgt!\n",
-      "doing zpt weight!\n",
-      "weight statistics: dict_keys(['genWeight', 'genWeight_normalization', 'xsec', 'lumi', 'muID', 'muIso', 'muTrig', 'LHERen', 'LHEFac', 'pdf_2rms', 'jetpuid_wgt', 'qgl'])\n",
-      "adding btag wgts!\n"
-     ]
-    }
-   ],
-   "source": [
-    "out_collections = coffea_processor.process(events)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d165c57e-f5b8-47ff-8bc3-68f6878f04f4",
+   "id": "91b43a56-14da-4f44-8614-af5dd886d469",
    "metadata": {},
    "outputs": [],
    "source": []
