adding the rest of the run2 inputs and outputs

--- a/test/stage1_test.ipynb
+++ b/test/stage1_test.ipynb
@@ -66,14 +66,16 @@
    "source": [
     "param_path = \"./configs/parameters/\"\n",
     "config = getParametersForYr(param_path, \"2018\")\n",
-    "coffea_processor = EventProcessor(config)"
+    "coffea_processor = EventProcessor(config, test_mode=True) # we assume that test_mode is True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "20718333-b81c-4477-b717-149db63e29dd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -82,98 +84,172 @@
       "dataset: dy_M-100To200\n",
       "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': True, 'dataset': 'dy_M-100To200', 'NanoAODv': 9, 'version': 'latest'}\n",
       "NanoAODv: 9\n",
-      "doing rochester!\n",
+      "doing rochester!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/depot/cms/kernels/root632/lib/python3.12/site-packages/dask_awkward/lib/structure.py:907: UserWarning: Please ensure that dask.awkward<dask, npartitions=1>\n",
+      "        is partitionwise-compatible with dask.awkward<dask, npartitions=1>\n",
+      "        (e.g. counts comes from a dak.num(array, axis=1)),\n",
+      "        otherwise this unflatten operation will fail when computed!\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "doing fsr!\n",
       "doing geofit!\n",
       "electron_id: mvaFall17V2Iso_WP90\n",
       "small file test sumWeights: 6798350.261352539\n",
       "muons mass_resolution dpt1: dask.awkward<multiply, npartitions=1>\n",
-      "prepare jets NanoAODv: 9\n"
+      "prepare jets NanoAODv: 9\n",
+      "do jec!\n",
+      "cross_section: 254.2\n",
+      "doing musf!\n",
+      "doing LHE!\n",
+      "doing pdf!\n",
+      "jet loop matched_mu_pass b4 : dask.awkward<bitwise-and, npartitions=1>\n",
+      "doing jet puid weights!\n",
+      "sj_dict.keys(): dict_keys(['nsoftjets2_nominal', 'htsoft2_nominal', 'nsoftjets5_nominal', 'htsoft5_nominal'])\n",
+      "adding QGL weights!\n",
+      "doing btag wgt!\n",
+      "doing zpt weight!\n",
+      "weight statistics: dict_keys(['genWeight', 'genWeight_normalization', 'xsec', 'lumi', 'muID', 'muIso', 'muTrig', 'LHERen', 'LHEFac', 'pdf_2rms', 'jetpuid_wgt', 'qgl'])\n",
+      "adding btag wgts!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/depot/cms/kernels/root632/lib/python3.12/site-packages/awkward/_nplikes/array_module.py:246: RuntimeWarning: divide by zero encountered in divide\n",
+      "  return impl(*broadcasted_args, **(kwargs or {}))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success in dy_M-100To200!\n",
+      "dataset: vbf_powheg\n",
+      "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': True, 'dataset': 'vbf_powheg', 'NanoAODv': 9, 'version': 'latest'}\n",
+      "NanoAODv: 9\n",
+      "doing rochester!\n",
+      "doing fsr!\n",
+      "doing geofit!\n",
+      "electron_id: mvaFall17V2Iso_WP90\n",
+      "small file test sumWeights: 38767.655119895935\n",
+      "muons mass_resolution dpt1: dask.awkward<multiply, npartitions=1>\n",
+      "prepare jets NanoAODv: 9\n",
+      "do jec!\n",
+      "cross_section: 0.0008210722\n",
+      "doing musf!\n",
+      "doing LHE!\n",
+      "doing pdf!\n",
+      "jet loop matched_mu_pass b4 : dask.awkward<bitwise-and, npartitions=1>\n",
+      "doing jet puid weights!\n",
+      "sj_dict.keys(): dict_keys(['nsoftjets2_nominal', 'htsoft2_nominal', 'nsoftjets5_nominal', 'htsoft5_nominal'])\n",
+      "adding QGL weights!\n",
+      "doing btag wgt!\n",
+      "weight statistics: dict_keys(['genWeight', 'genWeight_normalization', 'xsec', 'lumi', 'muID', 'muIso', 'muTrig', 'LHERen', 'LHEFac', 'pdf_2rms', 'jetpuid_wgt', 'qgl'])\n",
+      "adding btag wgts!\n",
+      "Success in vbf_powheg!\n",
+      "dataset: ggh_powheg\n",
+      "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': True, 'dataset': 'ggh_powheg', 'NanoAODv': 9, 'version': 'latest'}\n",
+      "NanoAODv: 9\n",
+      "doing rochester!\n",
+      "doing fsr!\n",
+      "doing geofit!\n",
+      "electron_id: mvaFall17V2Iso_WP90\n",
+      "small file test sumWeights: 214395.9242362976\n",
+      "muons mass_resolution dpt1: dask.awkward<multiply, npartitions=1>\n",
+      "prepare jets NanoAODv: 9\n",
+      "do jec!\n",
+      "cross_section: 0.01057\n",
+      "doing NNLOPS!\n",
+      "doing musf!\n",
+      "doing LHE!\n",
+      "doing pdf!\n",
+      "jet loop matched_mu_pass b4 : dask.awkward<bitwise-and, npartitions=1>\n",
+      "doing jet puid weights!\n",
+      "sj_dict.keys(): dict_keys(['nsoftjets2_nominal', 'htsoft2_nominal', 'nsoftjets5_nominal', 'htsoft5_nominal'])\n",
+      "adding QGL weights!\n",
+      "doing btag wgt!\n",
+      "weight statistics: dict_keys(['genWeight', 'genWeight_normalization', 'xsec', 'lumi', 'nnlops', 'muID', 'muIso', 'muTrig', 'LHERen', 'LHEFac', 'pdf_2rms', 'jetpuid_wgt', 'qgl'])\n",
+      "adding btag wgts!\n",
+      "Success in ggh_powheg!\n",
+      "dataset: data_A\n",
+      "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': False, 'dataset': 'data_A', 'NanoAODv': 9, 'version': 'latest'}\n",
+      "NanoAODv: 9\n",
+      "doing rochester!\n",
+      "doing fsr!\n",
+      "doing geofit!\n",
+      "electron_id: mvaFall17V2Iso_WP90\n",
+      "muons mass_resolution dpt1: dask.awkward<multiply, npartitions=1>\n",
+      "prepare jets NanoAODv: 9\n",
+      "do jec!\n",
+      "jet loop matched_mu_pass b4 : dask.awkward<bitwise-and, npartitions=1>\n",
+      "sj_dict.keys(): dict_keys(['nsoftjets2_nominal', 'htsoft2_nominal', 'nsoftjets5_nominal', 'htsoft5_nominal'])\n",
+      "weight statistics: dict_keys(['ones'])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/depot/cms/kernels/root632/lib/python3.12/site-packages/awkward/_nplikes/array_module.py:246: RuntimeWarning: divide by zero encountered in divide\n",
+      "  return impl(*broadcasted_args, **(kwargs or {}))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success in data_A!\n"
      ]
     }
    ],
    "source": [
-    "load_path = \"./test/stage1_inputs/dy_M-100To200\"\n",
+    "samples = [\n",
+    "    \"dy_M-100To200\", \n",
+    "    \"vbf_powheg\",\n",
+    "    \"ggh_powheg\", \n",
+    "    \"data_A\",\n",
+    "]\n",
+    "for sample in samples:\n",
+    "    load_path = f\"./test/stage1_inputs/{sample}\"\n",
+    "    \n",
+    "    dataset_dict = OmegaConf.load(load_path + \"/dataset_dict.yaml\")\n",
+    "    dataset_dict = OmegaConf.to_object(dataset_dict) # convert to normal dictionary, which may not be necessary, but oh well\n",
+    "    events = NanoEventsFactory.from_root(\n",
+    "        dataset_dict[\"files\"],\n",
+    "        schemaclass=NanoAODSchema,\n",
+    "        metadata= dataset_dict[\"metadata\"],\n",
+    "        uproot_options={\n",
+    "            \"timeout\":2400,\n",
+    "        },\n",
+    "    ).events()\n",
+    "    out_collections = coffea_processor.process(events)\n",
+    "    out_collections = ak.zip(out_collections, depth_limit=1).compute()\n",
     "\n",
-    "dataset_dict = OmegaConf.load(load_path + \"/dataset_dict.yaml\")\n",
-    "dataset_dict = OmegaConf.to_object(dataset_dict) # convert to normal dictionary, which may not be necessary, but oh well\n",
-    "events = NanoEventsFactory.from_root(\n",
-    "    dataset_dict[\"files\"],\n",
-    "    schemaclass=NanoAODSchema,\n",
-    "    metadata= dataset_dict[\"metadata\"],\n",
-    "    uproot_options={\n",
-    "        \"timeout\":2400,\n",
-    "        # \"allow_read_errors_with_report\": True, # this makes process skip over OSErrors\n",
-    "    },\n",
-    ").events()\n",
-    "out_collections = coffea_processor.process(events)\n",
-    "out_collections = ak.zip(out_collections, depth_limit=1).compute()\n",
-    "\n",
-    "load_path = \"./test/stage1_outputs/dy_M-100To200\"\n",
-    "target_out = ak.from_parquet(load_path+\"/part0.parquet\")\n",
-    "for field in target_out.fields:\n",
-    "    target_arr = ak.fill_none(target_out[field], -99.0)\n",
-    "    out_arr = ak.fill_none(out_collections[field], -99.0)\n",
-    "    is_same_arr = ak.all(ak.isclose(target_arr,out_arr))\n",
-    "    if not is_same_arr:\n",
-    "        print(f\"ERROR: not same array for field {field}!\")\n",
-    "        raise ValueError\n",
-    "print(\"Success!\")"
+    "    load_path = f\"./test/stage1_outputs/{sample}\"\n",
+    "    target_out = ak.from_parquet(load_path+\"/part0.parquet\")\n",
+    "    for field in target_out.fields:\n",
+    "        target_arr = ak.fill_none(target_out[field], -99.0)\n",
+    "        out_arr = ak.fill_none(out_collections[field], -99.0)\n",
+    "        # print(f\"len(target_arr): {len(target_arr)}\")\n",
+    "        # print(f\"len(out_arr): {len(out_arr)}\")\n",
+    "        is_same_arr = ak.all(ak.isclose(target_arr,out_arr))\n",
+    "        if not is_same_arr:\n",
+    "            print(f\"ERROR: not same array for field {field}!\")\n",
+    "            raise ValueError\n",
+    "    print(f\"Success in {sample}!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "50714921-4276-404a-8d9e-b0483d8b6401",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "d165c57e-f5b8-47ff-8bc3-68f6878f04f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "98db8963-4eb3-46b7-a935-575f9acaa44f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "2626feda-0f5e-4ee8-ab3b-966daca8b4a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "awkward.highlevel.Array"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91b43a56-14da-4f44-8614-af5dd886d469",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
