--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "275494e4-3a0f-4d26-aafe-8abd771df5b4",
    "metadata": {},
    "outputs": [],
@@ -18,20 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c648c548-cddf-4135-a75c-0ec4663e1085",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import coffea\n",
-    "print(coffea.__version__)\n",
-    "import dask\n",
-    "print(dask.__version__)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c1a51702-2fab-4bd6-a4f0-22cf289d5948",
    "metadata": {
     "editable": true,
@@ -40,14 +27,30 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "862f1063c8c746d2b6a72c933092246c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<h2>GatewayCluster</h2>'), HBox(children=(HTML(value='\\n<div>\\n<style scoped>\\n    …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "os.environ[\"X509_USER_PROXY\"] = \"/depot/cms/users/yun79/x509up_u383571\"\n",
-    "os.environ[\"PYTHONPATH\"] += \":/depot/cms/private/users/yun79/valerie/fork/copperheadV2\"\n",
+    "os.environ[\"PYTHONPATH\"] += \":/work/users/yun79/valerie/fork/copperheadV2\"\n",
     "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\"\n",
     "cluster = gateway.new_cluster(\n",
-    "    conda_env = \"/depot/cms/kernels/coffea2024\",\n",
-    "    # conda_env = \"/depot/cms/users/yun79/conda_envs/yun_coffea2024\",\n",
+    "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
+    "    # conda_env = \"/depot/cms/kernels/root632\",\n",
+    "    conda_env = \"/depot/cms/users/yun79/conda_envs/coffea_prototype\",\n",
     "    worker_cores = 1, #1\n",
     "    worker_memory = 5, #6\n",
     "    env = dict(os.environ),\n",
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7509afd5-e613-4dad-99f0-ebcda0453090",
    "metadata": {},
    "outputs": [],
@@ -157,9 +160,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:coffea2024]",
+   "display_name": "Python [conda env:coffea_prototype]",
    "language": "python",
-   "name": "conda-env-coffea2024-py"
+   "name": "conda-env-coffea_prototype-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -171,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
