--- a/test/stage1_test.ipynb
+++ b/test/stage1_test.ipynb
@@ -23,20 +23,7 @@
       "    warnings.filterwarnings(\"error\", module=\"coffea.*\")\n",
       "after the first `import coffea` or use `@pytest.mark.filterwarnings(\"error:::coffea.*\")` in pytest.\n",
       "Issue: coffea.lookup_tools.json_lookup will be removed by August 2024. Please use lumi_tools or correctionlib instead!.\n",
-      "  from coffea.lookup_tools.json_lookup import json_lookup\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test making sure I have the correct env set up\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  from coffea.lookup_tools.json_lookup import json_lookup\n",
       "/work/users/yun79/valerie/fork/copperheadV2/src/copperhead_processor.py:20: FutureWarning: In version 2025.1.0 (target date: 2024-12-31 11:59:59-06:00), this will be an error.\n",
       "To raise these warnings as errors (and get stack traces to find out where they're called), run\n",
       "    import warnings\n",
@@ -119,49 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "20718333-b81c-4477-b717-149db63e29dd",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/work/users/yun79/coffea_prototype/coffea/src/coffea/nanoevents/schemas/nanoaod.py:247: RuntimeWarning: Missing cross-reference index for LowPtElectron_electronIdx => Electron\n",
-      "  warnings.warn(\n",
-      "/work/users/yun79/coffea_prototype/coffea/src/coffea/nanoevents/schemas/nanoaod.py:247: RuntimeWarning: Missing cross-reference index for LowPtElectron_photonIdx => Photon\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "test jet right after from_root\n",
-      "max rel_err: 0.0\n",
       "dataset: dy_M-100To200\n",
       "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': True, 'dataset': 'dy_M-100To200', 'NanoAODv': 9, 'version': 'latest'}\n",
       "NanoAODv: 9\n",
-      "doing rochester!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/depot/cms/users/yun79/conda_envs/coffea_prototype/lib/python3.12/site-packages/dask_awkward/lib/structure.py:907: UserWarning: Please ensure that dask.awkward<dask, npartitions=1>\n",
-      "        is partitionwise-compatible with dask.awkward<dask, npartitions=1>\n",
-      "        (e.g. counts comes from a dak.num(array, axis=1)),\n",
-      "        otherwise this unflatten operation will fail when computed!\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "doing rochester!\n",
       "doing fsr!\n",
       "doing geofit!\n",
       "electron_id: mvaFall17V2Iso_WP90\n",
@@ -177,27 +136,14 @@
       "doing LHE!\n",
       "doing pdf!\n",
       "jet loop matched_mu_pass b4 : dask.awkward<bitwise-and, npartitions=1>\n",
+      "jet loop NanoAODv: 9\n",
       "doing jet puid weights!\n",
       "sj_dict.keys(): dict_keys(['nsoftjets2_nominal', 'htsoft2_nominal', 'nsoftjets5_nominal', 'htsoft5_nominal'])\n",
       "adding QGL weights!\n",
       "doing btag wgt!\n",
       "doing zpt weight!\n",
       "weight statistics: dict_keys(['genWeight', 'genWeight_normalization', 'xsec', 'lumi', 'muID', 'muIso', 'muTrig', 'LHERen', 'LHEFac', 'pdf_2rms', 'jetpuid_wgt', 'qgl'])\n",
-      "adding btag wgts!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/depot/cms/users/yun79/conda_envs/coffea_prototype/lib/python3.12/site-packages/awkward/_nplikes/array_module.py:246: RuntimeWarning: divide by zero encountered in divide\n",
-      "  return impl(*broadcasted_args, **(kwargs or {}))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "adding btag wgts!\n",
       "ERROR: not same array for field gjj_mass!\n",
       "rel err max: 0.010489715695605894\n",
       "N events with big errors: 1\n",
@@ -214,11 +160,10 @@
       "rel err max: 4.973848859202547e-05\n",
       "N events with big errors: 0\n",
       "ERROR: not same array for field jj_mass!\n",
-      "rel err max: 0.00020573994755163444\n",
+      "rel err max: 8.167912451695247e-05\n",
       "N events with big errors: 0\n",
       "Success in dy_M-100To200!\n",
       "test jet right after from_root\n",
-      "max rel_err: 0.0\n",
       "dataset: vbf_powheg\n",
       "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': True, 'dataset': 'vbf_powheg', 'NanoAODv': 9, 'version': 'latest'}\n",
       "NanoAODv: 9\n",
@@ -238,6 +183,7 @@
       "doing LHE!\n",
       "doing pdf!\n",
       "jet loop matched_mu_pass b4 : dask.awkward<bitwise-and, npartitions=1>\n",
+      "jet loop NanoAODv: 9\n",
       "doing jet puid weights!\n",
       "sj_dict.keys(): dict_keys(['nsoftjets2_nominal', 'htsoft2_nominal', 'nsoftjets5_nominal', 'htsoft5_nominal'])\n",
       "adding QGL weights!\n",
@@ -260,20 +206,10 @@
       "rel err max: 0.00012334973397436756\n",
       "N events with big errors: 0\n",
       "ERROR: not same array for field jj_mass!\n",
-      "rel err max: 0.0009467740692945485\n",
-      "N events with big errors: 0\n",
-      "ERROR: not same array for field mmjj_pt!\n",
-      "rel err max: 3.636411865334151e-05\n",
-      "N events with big errors: 0\n",
-      "ERROR: not same array for field mmjj_phi!\n",
-      "rel err max: 0.0003970173593212123\n",
-      "N events with big errors: 0\n",
-      "ERROR: not same array for field mmjj_mass!\n",
-      "rel err max: 1.3281072399273905e-05\n",
+      "rel err max: 0.0005520580953447275\n",
       "N events with big errors: 0\n",
       "Success in vbf_powheg!\n",
       "test jet right after from_root\n",
-      "max rel_err: 0.0\n",
       "dataset: ggh_powheg\n",
       "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': True, 'dataset': 'ggh_powheg', 'NanoAODv': 9, 'version': 'latest'}\n",
       "NanoAODv: 9\n",
@@ -294,6 +230,7 @@
       "doing LHE!\n",
       "doing pdf!\n",
       "jet loop matched_mu_pass b4 : dask.awkward<bitwise-and, npartitions=1>\n",
+      "jet loop NanoAODv: 9\n",
       "doing jet puid weights!\n",
       "sj_dict.keys(): dict_keys(['nsoftjets2_nominal', 'htsoft2_nominal', 'nsoftjets5_nominal', 'htsoft5_nominal'])\n",
       "adding QGL weights!\n",
@@ -316,11 +253,10 @@
       "rel err max: 8.262539213309061e-05\n",
       "N events with big errors: 0\n",
       "ERROR: not same array for field jj_mass!\n",
-      "rel err max: 0.00019992294558620583\n",
+      "rel err max: 0.00013328196372413724\n",
       "N events with big errors: 0\n",
       "Success in ggh_powheg!\n",
       "test jet right after from_root\n",
-      "max rel_err: 0.0\n",
       "dataset: data_A\n",
       "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': False, 'dataset': 'data_A', 'NanoAODv': 9, 'version': 'latest'}\n",
       "NanoAODv: 9\n",
@@ -335,22 +271,9 @@
       "test ject vector b4 JEC\n",
       "test ject vector after JEC\n",
       "jet loop matched_mu_pass b4 : dask.awkward<bitwise-and, npartitions=1>\n",
+      "jet loop NanoAODv: 9\n",
       "sj_dict.keys(): dict_keys(['nsoftjets2_nominal', 'htsoft2_nominal', 'nsoftjets5_nominal', 'htsoft5_nominal'])\n",
-      "weight statistics: dict_keys(['ones'])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/depot/cms/users/yun79/conda_envs/coffea_prototype/lib/python3.12/site-packages/awkward/_nplikes/array_module.py:246: RuntimeWarning: divide by zero encountered in divide\n",
-      "  return impl(*broadcasted_args, **(kwargs or {}))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "weight statistics: dict_keys(['ones'])\n",
       "ERROR: not same array for field jet1_rap!\n",
       "rel err max: 2.679114289244264e-05\n",
       "N events with big errors: 0\n",
@@ -364,14 +287,14 @@
       "rel err max: 2.1813906170536553e-05\n",
       "N events with big errors: 0\n",
       "ERROR: not same array for field jj_mass!\n",
-      "rel err max: 3.005798706394174e-05\n",
+      "rel err max: 1.627590400741897e-05\n",
       "N events with big errors: 0\n",
       "Success in data_A!\n"
      ]
     }
    ],
    "source": [
-    "np.set_printoptions(threshold=sys.maxsize)\n",
+    "# np.set_printoptions(threshold=sys.maxsize)\n",
     "\n",
     "samples = [\n",
     "    \"dy_M-100To200\", \n",
@@ -393,16 +316,26 @@
     "        },\n",
     "    ).events()\n",
     "    print(\"test jet right after from_root\")\n",
-    "    testJetVector(events.Jet)\n",
+    "    # print(type(events.Muon.compute()))\n",
+    "    # print(type(events.Jet.compute()))\n",
+    "    # print((events.Jet.pt.compute()))\n",
+    "    # testJetVector(events.Jet)\n",
+    "    \n",
     "\n",
     "    out_collections = coffea_processor.process(events)\n",
-    "    out_collections = ak.zip(out_collections, depth_limit=1).compute()\n",
+    "    # out_collections = ak.zip(out_collections, depth_limit=1).compute()\n",
+    "    out_collections = ak.zip(out_collections, depth_limit=1).persist().to_parquet(\".\")\n",
+    "    # raise ValueError\n",
+    "    out_collections = ak.from_parquet(\"part0.parquet\")\n",
     "\n",
     "    load_path = f\"./test/stage1_outputs/{sample}\"\n",
     "    target_out = ak.from_parquet(load_path+\"/part0.parquet\")\n",
     "    for field in target_out.fields:\n",
     "        target_arr = ak.to_numpy(ak.fill_none(target_out[field], -99.0))\n",
     "        out_arr = ak.to_numpy(ak.fill_none(out_collections[field], -99.0))\n",
+    "        # print(f\"field: {field}\")\n",
+    "        # print(f\"(target_arr): {(target_arr)}\")\n",
+    "        # print(f\"(out_arr): {(out_arr)}\")\n",
     "        # print(f\"len(target_arr): {len(target_arr)}\")\n",
     "        # print(f\"len(out_arr): {len(out_arr)}\")\n",
     "        is_same_arr = np.all(np.isclose(target_arr,out_arr, atol=1e-05))\n",
@@ -444,41 +377,6 @@
    "outputs": [],
    "source": [
     "! cp /depot/cms/kernels/root632/lib/python3.12/site-packages/coffea/nanoevents/methods/candidate.py . "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "7bf85937-673b-46bd-ba1e-dbcae8feb24e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022_samples.md\t\t    run_stage1_validation.py\n",
-      "2023_samples.md\t\t    run_stage2.py\n",
-      "conda_envs\t\t    run_stage3.py\n",
-      "configs\t\t\t    setup_proxy.sh\n",
-      "DaskGatewaySLURM.ipynb\t    src\n",
-      "dask-report.html\t    ssh_randomArtImage.txt\n",
-      "data\t\t\t    stage1_runner2.ipynb\n",
-      "make_parameters.py\t    stage1_runner.ipynb\n",
-      "nanoaod.py\t\t    test\n",
-      "orig_jets_calibration.yaml  Tutorial.ipynb\n",
-      "personal_notes.txt\t    Tutorial-test.ipynb\n",
-      "prestage_output\t\t    Untitled.ipynb\n",
-      "__pycache__\t\t    validation\n",
-      "quick_tests\t\t    validation_plots.ipynb\n",
-      "README.md\t\t    validation_plotter.py\n",
-      "ROOTPlotTest.ipynb\t    validation_plotter_unified.py\n",
-      "run_prestage.py\t\t    workspaces\n",
-      "run_stage1.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "! ls"
    ]
   },
   {
