--- a/test/stage1_test.ipynb
+++ b/test/stage1_test.ipynb
@@ -106,12 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "20718333-b81c-4477-b717-149db63e29dd",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/users/yun79/coffea_prototype/coffea/src/coffea/nanoevents/schemas/nanoaod.py:247: RuntimeWarning: Missing cross-reference index for LowPtElectron_electronIdx => Electron\n",
+      "  warnings.warn(\n",
+      "/work/users/yun79/coffea_prototype/coffea/src/coffea/nanoevents/schemas/nanoaod.py:247: RuntimeWarning: Missing cross-reference index for LowPtElectron_photonIdx => Photon\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -120,11 +130,28 @@
       "dataset: dy_M-100To200\n",
       "events.metadata: {'sumGenWgts': 7720081.838819998, 'nGenEvts': 2000000, 'data_entries': None, 'fraction': 1.0, 'original_fraction': 1.0, 'is_mc': True, 'dataset': 'dy_M-100To200', 'NanoAODv': 9, 'version': 'latest'}\n",
       "NanoAODv: 9\n",
-      "doing rochester!\n",
+      "doing rochester!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/depot/cms/users/yun79/conda_envs/coffea_prototype/lib/python3.12/site-packages/dask_awkward/lib/structure.py:907: UserWarning: Please ensure that dask.awkward<dask, npartitions=1>\n",
+      "        is partitionwise-compatible with dask.awkward<dask, npartitions=1>\n",
+      "        (e.g. counts comes from a dak.num(array, axis=1)),\n",
+      "        otherwise this unflatten operation will fail when computed!\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "doing fsr!\n",
       "doing geofit!\n",
       "electron_id: mvaFall17V2Iso_WP90\n",
-      "small file test sumWeights: 6798350.261352539\n",
+      "small file test sumWeights: 6798190.0\n",
       "muons mass_resolution dpt1: dask.awkward<multiply, npartitions=1>\n",
       "prepare jets NanoAODv: 9\n",
       "test ject vector right after prepare_jets\n",
@@ -143,7 +170,21 @@
       "doing btag wgt!\n",
       "doing zpt weight!\n",
       "weight statistics: dict_keys(['genWeight', 'genWeight_normalization', 'xsec', 'lumi', 'muID', 'muIso', 'muTrig', 'LHERen', 'LHEFac', 'pdf_2rms', 'jetpuid_wgt', 'qgl'])\n",
-      "adding btag wgts!\n",
+      "adding btag wgts!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/depot/cms/users/yun79/conda_envs/coffea_prototype/lib/python3.12/site-packages/awkward/_nplikes/array_module.py:246: RuntimeWarning: divide by zero encountered in divide\n",
+      "  return impl(*broadcasted_args, **(kwargs or {}))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ERROR: not same array for field gjj_mass!\n",
       "rel err max: 0.010489715695605894\n",
       "N events with big errors: 1\n",
@@ -162,6 +203,9 @@
       "ERROR: not same array for field jj_mass!\n",
       "rel err max: 8.167912451695247e-05\n",
       "N events with big errors: 0\n",
+      "ERROR: not same array for field wgt_nominal_total!\n",
+      "rel err max: 2.3590397979402227e-05\n",
+      "N events with big errors: 0\n",
       "Success in dy_M-100To200!\n",
       "test jet right after from_root\n",
       "dataset: vbf_powheg\n",
@@ -171,7 +215,7 @@
       "doing fsr!\n",
       "doing geofit!\n",
       "electron_id: mvaFall17V2Iso_WP90\n",
-      "small file test sumWeights: 38767.655119895935\n",
+      "small file test sumWeights: 38765.21875\n",
       "muons mass_resolution dpt1: dask.awkward<multiply, npartitions=1>\n",
       "prepare jets NanoAODv: 9\n",
       "test ject vector right after prepare_jets\n",
@@ -217,7 +261,7 @@
       "doing fsr!\n",
       "doing geofit!\n",
       "electron_id: mvaFall17V2Iso_WP90\n",
-      "small file test sumWeights: 214395.9242362976\n",
+      "small file test sumWeights: 214423.21875\n",
       "muons mass_resolution dpt1: dask.awkward<multiply, npartitions=1>\n",
       "prepare jets NanoAODv: 9\n",
       "test ject vector right after prepare_jets\n",
@@ -255,6 +299,9 @@
       "ERROR: not same array for field jj_mass!\n",
       "rel err max: 0.00013328196372413724\n",
       "N events with big errors: 0\n",
+      "ERROR: not same array for field wgt_nominal_total!\n",
+      "rel err max: 0.0001272399327283846\n",
+      "N events with big errors: 0\n",
       "Success in ggh_powheg!\n",
       "test jet right after from_root\n",
       "dataset: data_A\n",
@@ -290,6 +337,14 @@
       "rel err max: 1.627590400741897e-05\n",
       "N events with big errors: 0\n",
       "Success in data_A!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/depot/cms/users/yun79/conda_envs/coffea_prototype/lib/python3.12/site-packages/awkward/_nplikes/array_module.py:246: RuntimeWarning: divide by zero encountered in divide\n",
+      "  return impl(*broadcasted_args, **(kwargs or {}))\n"
      ]
     }
    ],
