updating more thing so things work for Amanddep

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -41,7 +41,7 @@
     "data_l = ['A', 'B', 'C', 'D']\n",
     "bkg_l = ['DY', 'TT',]\n",
     "sig_l = ['ggH', 'VBF']\n",
-    "! python run_prestage.py --chunksize 100000 --year 2018 --use_gateway --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)}"
+    "! python run_prestage.py --chunksize 100000 --year 2018 --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)}"
    ]
   },
   {
