update Dy 100to200 cross section and changing from deepFlavB -> deepB for being consistent with AN

--- a/quick_tests/AmandeepNanoComparision.ipynb
+++ b/quick_tests/AmandeepNanoComparision.ipynb
@@ -410,7 +410,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "cd11994a-3db0-486b-8b4f-ba53f52d8e07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 610 events out of 1926 events passed the selection\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_dict = {\"dy_VBF_filter_Amandeep_fromGenSim\": {\"files\": {\"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_1.root\": {\"object_path\": \"Events\", \"steps\": [[0, 90]], \"num_entries\": 90, \"uuid\": \"2ac08a62-66c6-11ef-9b33-0ee36880beef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_10.root\": {\"object_path\": \"Events\", \"steps\": [[0, 107]], \"num_entries\": 107, \"uuid\": \"095d0a30-66c6-11ef-870c-0103fea9beef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_11.root\": {\"object_path\": \"Events\", \"steps\": [[0, 104]], \"num_entries\": 104, \"uuid\": \"33661d9e-66c6-11ef-9b33-24e36880beef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_12.root\": {\"object_path\": \"Events\", \"steps\": [[0, 74]], \"num_entries\": 74, \"uuid\": \"08e8cc06-66c6-11ef-aa22-562c12acbeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_13.root\": {\"object_path\": \"Events\", \"steps\": [[0, 86]], \"num_entries\": 86, \"uuid\": \"ffe4f51c-66c5-11ef-a2a5-da870d0abeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_14.root\": {\"object_path\": \"Events\", \"steps\": [[0, 71]], \"num_entries\": 71, \"uuid\": \"369e4518-66c6-11ef-b0ef-0f8ed380beef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_15.root\": {\"object_path\": \"Events\", \"steps\": [[0, 86]], \"num_entries\": 86, \"uuid\": \"04a5e2b4-66c6-11ef-badc-0103fea9beef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_16.root\": {\"object_path\": \"Events\", \"steps\": [[0, 95]], \"num_entries\": 95, \"uuid\": \"4f00c0d6-66c6-11ef-ad14-e782e4a9beef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_17.root\": {\"object_path\": \"Events\", \"steps\": [[0, 78]], \"num_entries\": 78, \"uuid\": \"43e1e086-66c6-11ef-b662-3a18000abeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_18.root\": {\"object_path\": \"Events\", \"steps\": [[0, 105]], \"num_entries\": 105, \"uuid\": \"35e8fa82-66c6-11ef-a391-1ce36880beef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_19.root\": {\"object_path\": \"Events\", \"steps\": [[0, 82]], \"num_entries\": 82, \"uuid\": \"0078eefc-66c6-11ef-870c-f2870d0abeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_2.root\": {\"object_path\": \"Events\", \"steps\": [[0, 88]], \"num_entries\": 88, \"uuid\": \"0077db34-66c6-11ef-b456-f2870d0abeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_20.root\": {\"object_path\": \"Events\", \"steps\": [[0, 91]], \"num_entries\": 91, \"uuid\": \"0079cae8-66c6-11ef-bd83-f2870d0abeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_21.root\": {\"object_path\": \"Events\", \"steps\": [[0, 103]], \"num_entries\": 103, \"uuid\": \"2e4e5632-66c6-11ef-a391-73e36880beef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_3.root\": {\"object_path\": \"Events\", \"steps\": [[0, 84]], \"num_entries\": 84, \"uuid\": \"566cb4a6-66c6-11ef-9276-7d04000abeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_4.root\": {\"object_path\": \"Events\", \"steps\": [[0, 101]], \"num_entries\": 101, \"uuid\": \"5c5d904c-66c6-11ef-b662-7d04000abeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_5.root\": {\"object_path\": \"Events\", \"steps\": [[0, 97]], \"num_entries\": 97, \"uuid\": \"55f51a4a-66c6-11ef-9276-7d04000abeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_6.root\": {\"object_path\": \"Events\", \"steps\": [[0, 122]], \"num_entries\": 122, \"uuid\": \"07740944-66c6-11ef-aa22-5e2c12acbeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_7.root\": {\"object_path\": \"Events\", \"steps\": [[0, 85]], \"num_entries\": 85, \"uuid\": \"328ec4ac-66c6-11ef-8239-020013acbeef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_8.root\": {\"object_path\": \"Events\", \"steps\": [[0, 93]], \"num_entries\": 93, \"uuid\": \"237da67c-66c6-11ef-a391-0d8ed380beef\"}, \"/eos/purdue//store/user/amkaur/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/ReRecoGS_Flat_NanoAODSIM__CMSSW_10_6_26/240830_114610/0000/TAU-RunIISummer20UL18NanoAODv9-00001_9.root\": {\"object_path\": \"Events\", \"steps\": [[0, 84]], \"num_entries\": 84, \"uuid\": \"37bd975a-66c6-11ef-8239-0103fea9beef\"}}, \"form\": None, \"metadata\": {\"sumGenWgts\": 218043.51300123602, \"nGenEvts\": 1926, \"data_entries\": None, \"fraction\": 1.0, \"original_fraction\": 1.0, \"is_mc\": True, \"dataset\": \"dy_VBF_filter_Amandeep_fromGenSim\"}}}\n",
+    "\n",
+    "events_fromGenSim = NanoEventsFactory.from_root(\n",
+    "    input_dict['dy_VBF_filter_Amandeep_fromGenSim']['files'],\n",
+    "    schemaclass=NanoAODSchema,\n",
+    ").events()\n",
+    "events_fromGenSim = applyQuickSelection(events_fromGenSim)\n",
+    "zip_fromGenSim = getZip(events_fromGenSim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "bf8cdec9-5077-4595-9259-9edf411b9448",
    "metadata": {},
    "outputs": [
@@ -457,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "9e76d528-c170-4ac1-b7d2-3e5d8429f12b",
    "metadata": {},
    "outputs": [
@@ -578,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "01a63f47-c1be-444b-a70d-306910bac7a8",
    "metadata": {},
    "outputs": [
@@ -586,7 +611,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_525643/2246645993.py:10: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "/tmp/ipykernel_21395/42021428.py:10: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
       "  fig, ax_main = plt.subplots()\n"
      ]
     },
@@ -802,6 +827,7 @@
     "    fig, ax_main = plt.subplots()\n",
     "    \n",
     "    hist_fromScratch, hist_fromScratch_w2 = getHist(zip_fromScratch[field], binning)\n",
+    "    hist_fromGenSim, hist_fromGenSim_w2 = getHist(zip_fromGenSim[field], binning)\n",
     "    hist_rereco, hist_rereco_w2 = getHist(zip_rereco[field], binning)\n",
     "    hist_UL, hist_UL_w2 = getHist(zip_UL[field], binning)\n",
     "    # jj_mass_32, edges = np.histogram(dijet_32.mass, bins=binning, weights=)\n",
@@ -811,15 +837,23 @@
     "        \n",
     "    hep.histplot(hist_fromScratch, bins=binning, \n",
     "             histtype='errorbar', \n",
-    "            label=\"from Amandeep 10_6_32\", \n",
+    "            label=\"from Scratch\", \n",
     "             xerr=True, \n",
     "             yerr=np.sqrt(hist_fromScratch_w2),\n",
     "            color = \"blue\",\n",
     "            ax=ax_main\n",
     "    )\n",
+    "    hep.histplot(hist_fromGenSim, bins=binning, \n",
+    "             histtype='errorbar', \n",
+    "            label=\"from RERECO Gen-Sim\", \n",
+    "             xerr=True, \n",
+    "             yerr=np.sqrt(hist_fromGenSim_w2),\n",
+    "            color = \"green\",\n",
+    "            ax=ax_main\n",
+    "    )\n",
     "    hep.histplot(hist_rereco, bins=binning, \n",
     "             histtype='errorbar', \n",
-    "            label=\"from RERECO sample\", \n",
+    "            label=\"RERECO sample\", \n",
     "             xerr=True, \n",
     "             yerr=np.sqrt(hist_rereco_w2),\n",
     "            color = \"red\",\n",
@@ -827,7 +861,7 @@
     "    )\n",
     "    hep.histplot(hist_UL, bins=binning, \n",
     "             histtype='errorbar', \n",
-    "            label=\"from UL sample\", \n",
+    "            label=\"UL sample\", \n",
     "             xerr=True, \n",
     "             yerr=np.sqrt(hist_UL_w2),\n",
     "            color = \"black\",\n",
@@ -838,7 +872,8 @@
     "    plt.title(f\"{field} distribution of privately produced samples\")\n",
     "    plt.legend(loc=\"upper right\")\n",
     "    # plt.show()\n",
-    "    save_full_path = f\"./quick_plots/PrivateProd_{field}.pdf\"\n",
+    "    # save_full_path = f\"./quick_plots/PrivateProd_{field}.pdf\"\n",
+    "    save_full_path = f\"./quick_plots/PrivateProd_{field}.png\"\n",
     "    plt.savefig(save_full_path)\n",
     "    plt.clf()"
    ]
