--- a/data/res_calib/res_calib_generator.ipynb
+++ b/data/res_calib/res_calib_generator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "021dd300-9639-4c27-829d-ea36b551a0d9",
    "metadata": {},
    "outputs": [],
@@ -35,8 +35,8 @@
     "year = 2018\n",
     "# Define a correction with three input parameters\n",
     "correction = schema.Correction(\n",
-    "    name=\"muon_correction\",\n",
-    "    description=\"Correction for muon performance based on leading and subleading muon kinematics\",\n",
+    "    name=\"BS_ebe_mass_res_calibration\",\n",
+    "    description=\"Dimuon Mass resolution calibration with BeamSpot Constraint correction applied\",\n",
     "    version=1,\n",
     "    inputs=[\n",
     "        schema.Variable(name=\"leading_mu_pt\", type=\"real\", description=\"Transverse momentum of the leading muon (GeV)\"),\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "7904d17b-1e22-4016-8c18-f1cc5ad0d313",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
     "correction_set = _core.CorrectionSet.from_file(json_name)\n",
     "\n",
     "# Access the specific correction by name\n",
-    "correction = correction_set[\"muon_correction\"]\n",
+    "correction = correction_set[\"BS_ebe_mass_res_calibration\"]\n",
     "\n",
     "# Create an evaluator for the correction\n",
     "def evaluate_correction(leading_mu_pt, leading_mu_eta, subleading_mu_eta):\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "943c8a4d-8a83-46e7-8b9e-c08d0d8ce0d2",
    "metadata": {},
    "outputs": [],
@@ -166,8 +166,8 @@
     "year = 2017\n",
     "# Define a correction with three input parameters\n",
     "correction = schema.Correction(\n",
-    "    name=\"muon_correction\",\n",
-    "    description=\"Correction for muon performance based on leading and subleading muon kinematics\",\n",
+    "    name=\"BS_ebe_mass_res_calibration\",\n",
+    "    description=\"Dimuon Mass resolution calibration with BeamSpot Constraint correction applied\",\n",
     "    version=1,\n",
     "    inputs=[\n",
     "        schema.Variable(name=\"leading_mu_pt\", type=\"real\", description=\"Transverse momentum of the leading muon (GeV)\"),\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "c3fb1361-cd50-49c9-a1d4-213cdb248bc8",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
     "correction_set = _core.CorrectionSet.from_file(json_name)\n",
     "\n",
     "# Access the specific correction by name\n",
-    "correction = correction_set[\"muon_correction\"]\n",
+    "correction = correction_set[\"BS_ebe_mass_res_calibration\"]\n",
     "\n",
     "# Create an evaluator for the correction\n",
     "def evaluate_correction(leading_mu_pt, leading_mu_eta, subleading_mu_eta):\n",
