validated the implementation of correctionlib for BS constraint ebe mass calibration

--- a/data/res_calib/res_calib_generator.ipynb
+++ b/data/res_calib/res_calib_generator.ipynb
@@ -18,13 +18,12 @@
     "from correctionlib import schemav2 as schema\n",
     "\n",
     "import correctionlib\n",
-    "from correctionlib import _core\n",
     "import awkward as ak"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "id": "021dd300-9639-4c27-829d-ea36b551a0d9",
    "metadata": {},
    "outputs": [],
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "id": "7904d17b-1e22-4016-8c18-f1cc5ad0d313",
    "metadata": {},
    "outputs": [
@@ -119,7 +118,7 @@
     "\n",
     "\n",
     "# Load the correction set\n",
-    "correction_set = _core.CorrectionSet.from_file(json_name)\n",
+    "correction_set = correctionlib.CorrectionSet.from_file(json_name)\n",
     "\n",
     "# Access the specific correction by name\n",
     "correction = correction_set[\"BS_ebe_mass_res_calibration\"]\n",
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "943c8a4d-8a83-46e7-8b9e-c08d0d8ce0d2",
    "metadata": {},
    "outputs": [],
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "id": "c3fb1361-cd50-49c9-a1d4-213cdb248bc8",
    "metadata": {},
    "outputs": [
@@ -250,7 +249,7 @@
     "\n",
     "\n",
     "# Load the correction set\n",
-    "correction_set = _core.CorrectionSet.from_file(json_name)\n",
+    "correction_set = correctionlib.CorrectionSet.from_file(json_name)\n",
     "\n",
     "# Access the specific correction by name\n",
     "correction = correction_set[\"BS_ebe_mass_res_calibration\"]\n",
